<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splesh_image"
    tools:context=".Activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvMainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/currentWeatherContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCurrentTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="/"
                    android:textAppearance="@style/SansBold"
                    android:textColor="@android:color/white"
                    android:textSize="64sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMinMaxTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center"
                    android:text="/"
                    android:textAppearance="@style/SansRegular"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMainWeatherDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="/"
                    android:textAppearance="@style/SansRegular"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="/"
                    android:textAppearance="@style/SansBold"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/currentWeatherContainer"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white" />

            <RelativeLayout
                android:id="@+id/hourlyWeatherContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider1"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/hourlyForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/activity_main_xml_hourly_forecast"
                    android:textAppearance="@style/SansBold"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvHourly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hourlyForecast"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/transparent" />

                <TextView
                    android:id="@+id/hourlyForecastValidation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/hourlyForecast"
                    android:gravity="center"
                    android:text="@string/activity_main_xml_hourly_forecast_not_found"
                    android:textAppearance="@style/SansRegular"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/hourlyWeatherContainer"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/white" />

            <RelativeLayout
                android:id="@+id/daysWeatherContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider2"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dailyForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_main_xml_daily_forecast"
                    android:textAppearance="@style/SansBold"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/dailyForecast"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="false" />

                <TextView
                    android:id="@+id/dailyForecastValidation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/dailyForecast"
                    android:gravity="center"
                    android:text="@string/activity_main_xml_daily_forecast_not_found"
                    android:textAppearance="@style/SansRegular"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </RelativeLayout>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:gravity="center"
        android:text="@string/activity_main_xml_no_city_found"
        android:textAppearance="@style/SansBold"
        android:textColor="@android:color/white"
        android:textSize="20dp" />
</RelativeLayout>